learner, batch tfms and dblock

--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,22 +10,204 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
-    "# module name here\n",
-    "\n",
-    "> API details."
+    "#hide\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "#hide\n",
     "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "from fastcore.all import *\n",
+    "from fastai.basics import Transform, ItemTransform\n",
+    "from fastai.text.all import *\n",
+    "from transformers import AutoTokenizer, AutoConfig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data\n",
+    "\n",
+    "> Transforms and DataBlocks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class TokBatchTransform(Transform):\n",
+    "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer, \n",
+    "                 config=None, tokenizer=None, is_lm=False, with_labels=False,\n",
+    "                 padding=True, truncation=True, max_length=None, \n",
+    "                 do_targets=False, **kwargs):\n",
+    "        if tokenizer is None:\n",
+    "            tokenizer = tokenizer_cls.from_pretrained(pretrained_model_name, config=config)\n",
+    "        self.tokenizer = tokenizer\n",
+    "        self.kwargs = kwargs\n",
+    "        store_attr()\n",
+    "    \n",
+    "    def encodes(self, batch):\n",
+    "        # batch is a list of tuples of ({text or (text1, text2)}, {targets...})\n",
+    "        if is_listy(batch[0][0]): # 1st element is tuple\n",
+    "            texts = ([s[0][0] for s in batch], [s[0][1] for s in batch])\n",
+    "        elif is_listy(batch[0]): \n",
+    "            texts = ([s[0] for s in batch],)\n",
+    "        else: # batch is list of texts\n",
+    "            texts = (list(batch),)\n",
+    "            batch = [(s, ) for s in batch]\n",
+    "        # return_tensors = None if self.is_lm else 'pt'\n",
+    "        # padding = None if self.is_lm else self.padding\n",
+    "        inps = self.tokenizer(*texts,\n",
+    "                              add_special_tokens=True,\n",
+    "                              padding=self.padding,\n",
+    "                              truncation=self.truncation,\n",
+    "                              max_length=self.max_length,\n",
+    "                              return_tensors='pt',\n",
+    "                              **self.kwargs)\n",
+    "        \n",
+    "        if self.do_targets and isinstance(batch[0][1], str):\n",
+    "            target_texts = [s[1] for s in batch]\n",
+    "            targets = self.tokenizer(target_texts,\n",
+    "                              add_special_tokens=False,\n",
+    "                              padding=self.padding,\n",
+    "                              truncation=self.truncation,\n",
+    "                              max_length=self.max_length,\n",
+    "                              return_tensors='pt', \n",
+    "                                    **self.kwargs).input_ids\n",
+    "            # join inps and targs\n",
+    "        else:\n",
+    "            # inps are batched, collate targets into batches too\n",
+    "            labels = default_collate([s[1:] for s in batch])\n",
+    "            if self.with_labels:\n",
+    "                # TODO consider cases when there are multiple labels\n",
+    "                inps['labels'] = labels[0]\n",
+    "                res = (inps, )\n",
+    "            else:\n",
+    "                res = (inps, ) + tuple(labels)\n",
+    "#         if self.is_lm:\n",
+    "#             res = [(x, x) for x in res]\n",
+    "        return res\n",
+    "    \n",
+    "    def decodes(self, x:TensorText):\n",
+    "        return TitledStr(self.tokenizer.decode(x.cpu(), skip_special_tokens=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class Undict(ItemTransform):\n",
+    "    \n",
+    "    def decodes(self, b):\n",
+    "        # this is done hacky way to make show_batch work both when labels are separate and when in dict\n",
+    "        # should be a better way\n",
+    "        x = b[0]\n",
+    "        if 'input_ids' in x: res = (TensorText(x['input_ids']), )\n",
+    "        if 'labels' in x: res += (x['labels'], )\n",
+    "        return res + tuple(b[1:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DataBlocks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class TransformersTextBlock(TransformBlock):\n",
+    "    \"A `TransformBlock` for texts using pretrained tokenizers from Huggingface\"\n",
+    "    @delegates(TokBatchTransform)\n",
+    "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer, \n",
+    "                 config=None, tokenizer=None, is_lm=False, **kwargs):\n",
+    "        before_batch_tfm = TokBatchTransform(pretrained_model_name=pretrained_model_name, tokenizer_cls=tokenizer_cls, \n",
+    "                 config=config, tokenizer=tokenizer, **kwargs)\n",
+    "        return super().__init__(dl_type=LMDataLoader if is_lm else SortedDL,\n",
+    "                                dls_kwargs={'before_batch': before_batch_tfm,\n",
+    "                                            'create_batch': fa_convert},\n",
+    "                                batch_tfms=Undict()\n",
+    "                               )\n",
+    "\n",
+    "#     @classmethod\n",
+    "#     def from_pretrained(cls, ):\n",
+    "#         pass\n",
+    "\n",
+    "#     @classmethod\n",
+    "#     def from_tokenizer(cls, ):\n",
+    "#         pass\n",
+    "\n",
+    "#     @classmethod\n",
+    "#     def from_config(cls, ):\n",
+    "#         pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00_data.ipynb.\n",
+      "Converted 01_learner.ipynb.\n",
+      "Converted index.ipynb.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#hide\n",
+    "from nbdev.export import notebook2script; notebook2script()"
    ]
   },
   {
