--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#hide\n",
-    "# from fasthugs.data import *\n",
-    "# from fasthugs.learner import *"
+    "# imports here"
    ]
   },
   {
