classification tests and example

--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "11b03d10",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
-    "# default_exp data"
+    "# default_exp learner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "66a21217",
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#hide\n",
@@ -24,9 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f5e07042",
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#hide\n",
@@ -35,58 +38,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c54a851f",
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#export\n",
     "from fastai.basics import *\n",
-    "from inspect import signature"
+    "from inspect import signature\n",
+    "from fasthugs.data import TransformersTextBlock\n",
+    "\n",
+    "from transformers import AutoTokenizer, AutoConfig, AutoModelForSequenceClassification"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "06bc8da7",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "# Learner for transformers"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0db55535",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "## Parameter groups"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "TODOs:\n",
+    "- [ ] exclude modules w/o params\n",
+    "- [ ] add layerwise splitter for Transfomers"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "63de5476",
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "#skip\n",
+    "#hide\n",
+    "# for n, m in model.base_model.named_children(): print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# export\n",
     "def default_splitter(model):\n",
-    "    groups = L([model.base_model.embeddings, model.base_model.encoder]) + L(model.children())[1:]\n",
+    "    groups = L(model.base_model.children()) + L(model.children())[1:]\n",
     "    return groups.map(params)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c2f40ef0",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "## TransLearner and utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "2f6684a2",
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#export\n",
@@ -104,9 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "87a4d742",
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#export\n",
@@ -123,9 +160,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "28e70b3a",
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "#skip\n",
+    "#hide\n",
+    "def __init__(self, dls, model, loss_func=None, opt_func=Adam, lr=defaults.lr, splitter=trainable_params, cbs=None,\n",
+    "                 metrics=None, path=None, model_dir='models', wd=None, wd_bn_bias=False, train_bn=True,\n",
+    "                 moms=(0.95,0.85,0.95)):\n",
+    "        path = Path(path) if path is not None else getattr(dls, 'path', Path('.'))\n",
+    "        if loss_func is None:\n",
+    "            loss_func = getattr(dls.train_ds, 'loss_func', None)\n",
+    "            assert loss_func is not None, \"Could not infer loss function from the data, please pass a loss function.\"\n",
+    "        self.dls,self.model = dls,model\n",
+    "        store_attr(but='dls,model,cbs')\n",
+    "        self.training,self.create_mbar,self.logger,self.opt,self.cbs = False,True,print,None,L()\n",
+    "        self.add_cbs(L(defaults.callbacks)+L(cbs))\n",
+    "        self(\"after_create\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#export\n",
@@ -133,6 +195,8 @@
     "class TransLearner(Learner):\n",
     "    \"Learner for training transformers from HuggingFace\"\n",
     "    def __init__(self, dls, model, **kwargs):\n",
+    "        splitter = kwargs.pop('splitter', None)\n",
+    "        if splitter is None: kwargs['splitter'] = default_splitter\n",
     "        super().__init__(dls, model, **kwargs)\n",
     "        self.model_args = set(signature(model.forward).parameters.keys())\n",
     "        self.add_cb(TransCallback())\n",
@@ -162,10 +226,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "### Using TransLearner for sequence classification"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "eb779074",
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "#slow\n",
+    "path = untar_data(URLs.IMDB_SAMPLE)\n",
+    "texts = pd.read_csv(path/'texts.csv')\n",
+    "\n",
+    "model_name = 'distilbert-base-uncased'\n",
+    "max_len = 128\n",
+    "bs = 8\n",
+    "val_bs = 16\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "dblock = DataBlock(blocks = [TransformersTextBlock(tokenizer=tokenizer), CategoryBlock()],\n",
+    "                   get_x=ItemGetter('text'),\n",
+    "                   get_y=ItemGetter('label'),\n",
+    "                   splitter=ColSplitter())\n",
+    "dls = dblock.dataloaders(texts, bs=bs, val_bs=val_bs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertForSequenceClassification: ['vocab_transform.weight', 'vocab_transform.bias', 'vocab_layer_norm.weight', 'vocab_layer_norm.bias', 'vocab_projector.weight', 'vocab_projector.bias']\n",
+      "- This IS expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['pre_classifier.weight', 'pre_classifier.bias', 'classifier.weight', 'classifier.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.473346</td>\n",
+       "      <td>0.343880</td>\n",
+       "      <td>0.865000</td>\n",
+       "      <td>00:22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.261769</td>\n",
+       "      <td>0.364859</td>\n",
+       "      <td>0.875000</td>\n",
+       "      <td>00:21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#slow\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
+    "learn = TransLearner(dls, model, metrics=accuracy)\n",
+    "learn.fit(2, 2e-5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "## Fin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -173,6 +344,8 @@
      "text": [
       "Converted 00_data.ipynb.\n",
       "Converted 01_learner.ipynb.\n",
+      "Converted 10_examples.classification-imdb.ipynb.\n",
+      "Converted 11_examples.mlm-imdb.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -185,8 +358,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78f72d77",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": []
   }
@@ -207,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
