LMBatchTransform and mlm using hf datasets

--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -2,8 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "id": "2044f29a",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# default_exp learner"
@@ -11,8 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "id": "cb7885f1",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#hide\n",
@@ -22,8 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "id": "9227f26a",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#hide\n",
@@ -32,8 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "id": "21946412",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#export\n",
@@ -41,26 +53,35 @@
     "from inspect import signature\n",
     "from fasthugs.data import TransformersTextBlock\n",
     "\n",
-    "from transformers import AutoTokenizer, AutoConfig, AutoModelForSequenceClassification"
+    "from transformers import AutoTokenizer, AutoConfig, AutoModelForSequenceClassification, BatchEncoding"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "92e05920",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "# Learner for transformers"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "8ecca321",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "## Parameter groups"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "e6b78a49",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "TODOs:\n",
     "- [ ] exclude modules w/o params\n",
@@ -69,8 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "id": "1f199e7b",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#skip\n",
@@ -80,8 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "id": "9f8638d3",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# export\n",
@@ -92,34 +119,60 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "1afeb4ce",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "## TransLearner and utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "id": "972dc8f5",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#export\n",
     "def to_device(b, device=None):\n",
-    "    \"Recursively put `b` on `device`. Handles `dict`s\"\n",
+    "    \"Recursively put `b` on `device`. Handles `BatchEncoding`s\"\n",
     "    if defaults.use_cuda==False: device='cpu'\n",
     "    elif device is None: device=default_device()\n",
-    "    def _inner(o):\n",
+    "    def _inner(o):      \n",
     "        if isinstance(o,Tensor): return o.to(device, non_blocking=True)\n",
+    "        elif isinstance(o, (dict, BatchEncoding)):\n",
+    "            return {k:to_device(v) for k,v in o.items()}\n",
     "        elif hasattr(o, \"to_device\"): return o.to_device(device)\n",
-    "        elif isinstance(o, dict): return {k:to_device(v) for k,v in o.items()}\n",
     "        else: return o\n",
     "    return apply(_inner, b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "id": "317d3de3",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "#cuda\n",
+    "device = torch.device('cuda:0')\n",
+    "d = {'a':tensor([1,2,3])}\n",
+    "d_cuda = to_device(d)\n",
+    "assert d_cuda['a'].device == device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d1c77894",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#export\n",
@@ -136,8 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "id": "d43b22a0",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#skip\n",
@@ -158,8 +214,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "id": "2333fc39",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#export\n",
@@ -199,7 +258,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "2c41464c",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "### Using TransLearner for sequence classification"
    ]
@@ -207,7 +269,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "03ad9871",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#slow\n",
@@ -229,7 +294,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "5db7b5ad",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -290,15 +358,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "f04e8bac",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "## Fin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 12,
+   "id": "f2324965",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -320,7 +394,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "953d02ed",
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": []
   }
@@ -330,6 +407,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
