--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2044f29a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cb7885f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9227f26a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "21946412",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +45,12 @@
     "from inspect import signature\n",
     "from fasthugs.data import TransformersTextBlock\n",
     "\n",
-    "from transformers import AutoTokenizer, AutoConfig, AutoModelForSequenceClassification"
+    "from transformers import AutoTokenizer, AutoConfig, AutoModelForSequenceClassification, BatchEncoding"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "92e05920",
    "metadata": {},
    "source": [
     "# Learner for transformers"
@@ -53,6 +58,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8ecca321",
    "metadata": {},
    "source": [
     "## Parameter groups"
@@ -60,6 +66,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e6b78a49",
    "metadata": {},
    "source": [
     "TODOs:\n",
@@ -70,6 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1f199e7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9f8638d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +101,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1afeb4ce",
    "metadata": {},
    "source": [
     "## TransLearner and utils"
@@ -100,18 +110,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "972dc8f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
     "def to_device(b, device=None):\n",
-    "    \"Recursively put `b` on `device`. Handles `dict`s\"\n",
+    "    \"Recursively put `b` on `device`. Handles `BatchEncoding`s\"\n",
     "    if defaults.use_cuda==False: device='cpu'\n",
     "    elif device is None: device=default_device()\n",
-    "    def _inner(o):\n",
+    "    def _inner(o):      \n",
     "        if isinstance(o,Tensor): return o.to(device, non_blocking=True)\n",
+    "        elif isinstance(o, (dict, BatchEncoding)):\n",
+    "            return {k:to_device(v) for k,v in o.items()}\n",
     "        elif hasattr(o, \"to_device\"): return o.to_device(device)\n",
-    "        elif isinstance(o, dict): return {k:to_device(v) for k,v in o.items()}\n",
     "        else: return o\n",
     "    return apply(_inner, b)"
    ]
@@ -119,6 +131,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "317d3de3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cuda\n",
+    "device = torch.device('cuda:0')\n",
+    "d = {'a':tensor([1,2,3])}\n",
+    "d_cuda = to_device(d)\n",
+    "assert d_cuda['a'].device == device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1c77894",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,6 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d43b22a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,6 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2333fc39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,6 +228,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c41464c",
    "metadata": {},
    "source": [
     "### Using TransLearner for sequence classification"
@@ -207,6 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "03ad9871",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,6 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5db7b5ad",
    "metadata": {},
    "outputs": [
     {
@@ -290,6 +322,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f04e8bac",
    "metadata": {},
    "source": [
     "## Fin"
@@ -298,6 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f2324965",
    "metadata": {},
    "outputs": [
     {
@@ -320,6 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "953d02ed",
    "metadata": {},
    "outputs": [],
    "source": []
