--- a/nbs/10_examples.classification-imdb.ipynb
+++ b/nbs/10_examples.classification-imdb.ipynb
@@ -74,9 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import (AutoTokenizer,\n",
-    "                          AutoModelForSequenceClassification,\n",
-    "                          AutoConfig)\n",
+    "from transformers import AutoModelForSequenceClassification\n",
     "from fastai.text.all import *\n",
     "from fastai.callback.wandb import *\n",
     "\n",
