--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -40,6 +40,7 @@
     "from fastcore.all import *\n",
     "from fastai.basics import Transform, ItemTransform\n",
     "from fastai.text.all import *\n",
+    "from functools import partial\n",
     "from transformers import (AutoTokenizer, AutoConfig, BatchEncoding,\n",
     "                          DataCollatorForLanguageModeling,\n",
     "                          DataCollatorForWholeWordMask)"
@@ -52,6 +53,77 @@
     "# Data\n",
     "\n",
     "> Transforms and DataBlocks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def get_splits(dataset, train='train', valid='validation'):\n",
+    "    nt, nv = len(dataset[train]), len(dataset[valid])\n",
+    "    return L(range(nt)), L(range(nt, nt+nv))\n",
+    "\n",
+    "# def DatasetSplitter(train='train', valid='validation'):\n",
+    "#     return partial(get_splits, train=train, valid=valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class TextGetter(ItemTransform):\n",
+    "    def __init__(self, s1='text', s2=None):\n",
+    "        self.s1, self.s2 = s1, s2\n",
+    "    def encodes(self, sample):\n",
+    "        if self.s2 is None: return sample[self.s1]\n",
+    "        else: return sample[self.s1], sample[self.s2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "@typedispatch\n",
+    "def show_batch(x:TensorText, y, samples, ctxs=None, max_n=10, trunc_at=150, **kwargs):\n",
+    "    if ctxs is None: ctxs = get_empty_df(min(len(samples), max_n))\n",
+    "    if isinstance(samples[0][0], tuple):\n",
+    "        samples = L((*s[0], *s[1:]) for s in samples)\n",
+    "        if trunc_at is not None: samples = L((s[0].truncate(trunc_at), s[1].truncate(trunc_at), *s[2:]) for s in samples)\n",
+    "    if trunc_at is not None: samples = L((s[0].truncate(trunc_at),*s[1:]) for s in samples)\n",
+    "    ctxs = show_batch[object](x, y, samples, max_n=max_n, ctxs=ctxs, **kwargs)\n",
+    "    display_df(pd.DataFrame(ctxs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def find_first(t, e):\n",
+    "    for i, v in enumerate(t):\n",
+    "        if v == e: return i\n",
+    "        \n",
+    "def split_by_sep(t, sep_tok_id):\n",
+    "    idx = find_first(t, sep_tok_id)\n",
+    "    return t[:idx], t[idx:]"
    ]
   },
   {
@@ -112,11 +184,13 @@
     "            tokenizer = tokenizer_cls.from_pretrained(pretrained_model_name, config=config)\n",
     "        self.tokenizer = tokenizer\n",
     "        self.kwargs = kwargs\n",
+    "        self._two_texts = False\n",
     "        store_attr()\n",
     "    \n",
     "    def encodes(self, batch):\n",
     "        # batch is a list of tuples of ({text or (text1, text2)}, {targets...})\n",
     "        if is_listy(batch[0][0]): # 1st element is tuple\n",
+    "            self._two_texts = True\n",
     "            texts = ([s[0][0] for s in batch], [s[0][1] for s in batch])\n",
     "        elif is_listy(batch[0]): \n",
     "            texts = ([s[0] for s in batch],)\n",
@@ -157,6 +231,10 @@
     "        return res\n",
     "    \n",
     "    def decodes(self, x:TensorText):\n",
+    "        if self._two_texts:\n",
+    "            x1, x2 = split_by_sep(x, self.tokenizer.sep_token_id)\n",
+    "            return (TitledStr(self.tokenizer.decode(x1.cpu(), skip_special_tokens=True)),\n",
+    "                    TitledStr(self.tokenizer.decode(x2.cpu(), skip_special_tokens=True)))\n",
     "        return TitledStr(self.tokenizer.decode(x.cpu(), skip_special_tokens=True))"
    ]
   },
